--- a/libs/css/style.css
+++ b/libs/css/style.css
@@ -14,6 +14,11 @@ p{
     top:0;
 }
 
+.hablemos{
+    align-content: center;
+    padding-left: 360px
+}
+
 footer{border-top:100000px solid silver; padding:1em 0; margin:3em 0 0 0;}
 
 section{
